[code] added env logic and implemented wrt to new schema
